# Python-Stream-Processing-Framework

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  LICENSE  README.md  TRADEMARK.md  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  docker-compose.apps.yml  docker-compose.ha.yml  docker-compose.monitoring.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  prometheus.yml  pyproject.toml  sitemap.xml  verify_config.py  verify_output_final.txt  verify_output_final_cleanup.txt  verify_output_final_v3.txt  verify_output_phase2.txt  verify_output_post_cleanup.txt
.agent/workflows/: cleanup.md
.github/workflows/: docs.yml
api/backends/: index.html
api/dsl/: index.html
api/stream/: index.html
architecture/: index.html
backends-overview/: index.html
cli/: index.html
concurrency/: index.html
contributing/: index.html
deep-dive/: index.html
deployment/: index.html
docs/: architecture.md  backends-overview.md  cli.md  concurrency.md  contributing.md  deep-dive.md  deployment.md  examples.md  index.md  observability.md  operations.md  plugins.md  project-structure.md  reliability.md  roadmap.md  schema-evolution.md  state.md  tutorial.md
docs/api/: backends.md  dsl.md  stream.md
examples/: advanced_topology.py  chaos_demo.py  dlq_demo.py  docker-compose.apps.yml  docker-compose.ha.yml  docker-compose.monitoring.yml  dsl_demo.py  event_time_example.py  ha_demo.py  idempotent_sink_demo.py  index.html  inventory_pipeline.py  memory_demo.py  prometheus.monitoring.yml  session_window_demo.py  stateful_wordcount.py  valkey_demo.py  verify_memory.py  verify_refactor.py
examples/courier_app/: api.py  pipeline.py  state.py  verify.py
examples/fraud_app/: api.py  pipeline.py  verify.py
examples/grafana/: dashboard.json
examples/grafana/provisioning/datasources/: datasource.yml
examples/inventory_app/: api.py  events.py  pipeline.py  state.py  verify.py  verify_crash_recovery.py
helm/pspf/: Chart.yaml  values.yaml
helm/pspf/templates/: _helpers.tpl  deployment.yaml  service.yaml
observability/: index.html
operations/: index.html
plugins/: index.html
project-structure/: index.html
protos/: courier.proto  courier_pb2.py  courier_pb2.pyi  fraud.proto  fraud_pb2.py  fraud_pb2.pyi  inventory.proto  inventory_pb2.py  inventory_pb2.pyi
pspf/: __init__.py  admin.py  cli.py  config.py  context.py  models.py  plugins.py  processor.py  schema.py  settings.py  stream.py  telemetry.py  topology.py
pspf/admin/: __init__.py  admin.py  dashboard_assets.py
pspf/api/: __init__.py  cluster_api.py
pspf/cli/: main.py
pspf/cluster/: coordinator.py  interface.py
pspf/connectors/: __init__.py  base.py  dead_letter.py  file.py  http.py  kafka.py  log_source.py  memory.py  mqtt.py  valkey.py
pspf/log/: interfaces.py  local_log.py  memory_store.py  replicated_log.py
pspf/operators/: __init__.py  core.py  state.py  windowing.py
pspf/processing/: dsl.py  windows.py
pspf/runtime/: __init__.py  checkpoints.py  coordination.py  dedup.py  executor.py  redis_store.py  runner.py  scheduler.py  valkey_store.py
pspf/state/: store.py
pspf/state/backends/: __init__.py  memory_store.py  rocksdb_store.py  sqlite.py  sqlite_store.py
pspf/tests/: verify_refactor_wrapper.py
pspf/utils/: logging.py  metrics.py  replay.py  schema_registry.py  tracing.py
reliability/: index.html
roadmap/: index.html
schema-evolution/: index.html
search/: search_index.json
state/: index.html
tests/: chaos_test.py  conftest.py  test_cluster.py  test_crash_recovery.py  test_decorators.py  test_enterprise_features.py  test_ha_failover.py  test_matrix.py  test_operators.py  test_plugins.py  test_rc1_features.py  test_replicated_log.py  test_rocksdb_store.py  test_runtime.py  test_state_interop.py  test_state_store.py  test_stream_windowing.py  test_unit.py  test_valkey_integration.py  test_windows.py  verify_log_stability.py
tests/connectors/: test_kafka.py  test_sink.py
tests/integration/: test_e2e.py  test_stream_facade.py
tutorial/: index.html
