[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pspf*"]
exclude = ["examples*", "tests*", "protos*"]

[project]
name = "pspf"
version = "0.1.0"
description = "Python Stream Processing Framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Joseph Hall", email = "joseph@josephmatthewhall.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "aiofiles>=23.0.0",
    "msgpack>=1.0.0",
    "valkey>=5.0.0",
    "protobuf>=4.0.0",
]

[project.scripts]
pspf = "pspf.cli.main:main"

[project.urls]
Homepage = "https://github.com/JosephMattHall/Python-Stream-Processing-Framework"
Issues = "https://github.com/JosephMattHall/Python-Stream-Processing-Framework/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "mypy",
  "black",
  "isort",
  "ruff",
]
hardened = [
    "aiokafka>=0.8.0",
    "gmqtt>=0.6.12",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
